--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/CryptoBuild.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/CryptoBuild.data.gz",
-        frameworkUrl: "Build/CryptoBuild.framework.js.gz",
-        codeUrl: "Build/CryptoBuild.wasm.gz",
+        dataUrl: "Build/CryptoBuild.data",
+        frameworkUrl: "Build/CryptoBuild.framework.js",
+        codeUrl: "Build/CryptoBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CryptoPetz",
